--- a/src/renderer/Index.css
+++ b/src/renderer/Index.css
@@ -8,6 +8,14 @@ html {
 }
 body {
     width: 100vw;
+    height: 100vh;
     padding: 20px;
     box-sizing: border-box;
+}
+
+#app {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
